--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
-  <head>
-  <title>Dragos's Hatch Portfolio Page</title>
-  <meta name="description" content="Our first page">
-  </head>
-  <body>
+<head>
+    <title>Dragos's Hatch Portfolio Page</title>
+    <meta name="description" content="Our first page">
+    <meta name="keywords" content="html tutorial template">
+</head>
+<body>
   This is the first version of the first page of Hatch portfolio. More to be added soon!
   </body>
 </html>
