--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <title>Dragos's Hatch Portfolio Page</title>
     <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
 </head>
 <body>
-  This is the first version of the first page of Hatch portfolio. More to be added soon!
-  </body>
+    <h1>Welcome to Dragos's Hatch UP Headquarters</h1>
+    <h2>Table of Contents</h2>
+    <p>P5.js Apps</p>
+    <p>Web Apps</p>
+    <p>Specialized Apps</p>
+</body>
 </html>
