--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="description" content="Our first page">
 </head>
 <body>
-    <h1>Welcome to Dragos's Hatch UP Headquarters</h1>
+    <div id="top_container">
+	<h1>Welcome to Dragos's Hatch UP Headquarters</h1>
     <h2>Table of Contents</h2>
     <p>P5.js Apps</p>
     <p>Web Apps</p>
     <p>Specialized Apps</p>
+  </div>
 </body>
 </html>
