--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div id="top_container">
 	<h1>Welcome to Dragos's Hatch UP Headquarters</h1>
     <h2>Table of Contents</h2>
-    <p>P5.js Apps <a href="lessons.html"></a> </p>
-    <p>Web Apps</p>
-    <p>Specialized Apps</p>
+    <p>--> P5.js Apps</p>
+    <p>--> Web Apps</p>
+    <p>--> Specialized Apps</p>
   </div>
 </body>
 </html>
