--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="description" content="Our first page">
 </head>
 <body>
+    <header>
+    <nav>
+      <a href="about.html">About</a> <!-- If you want an About page -->
+      <a href="mailto:dragos.david@hatchcanada.com">Contact</a>
+      <a href="https://github.com/DSBD">GitHub</a>
+    </nav>
+  </header>
     <div id="top_container">
 	<h1>Welcome to Dragos's Hatch UP Headquarters</h1>
     <h2>Table of Contents</h2>
