--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Table of Contents</h2>
     <p>"- P5.js Apps  "<a href="p5.html">Click Here</a></p>
     <p>"- Web Apps  "<a href="web.html">Click Here</a></p>
-    <p>"- Specialized Apps  "<a href="fun.html">Click Here</a></p>
+    <p>- Specialized Apps  <a href="fun.html">Click Here</a></p>
   </div>
 </body>
 </html>
