--- a/web.html
+++ b/web.html
@@ -1,1 +1,11 @@
-
+<html>
+<head>
+    <title>Web Projects Page</title>
+</head>
+  
+<body>
+  <div id="top_container">
+	  <h1>This Page will be for all Web Projects</h1>
+  </div>
+</body>
+</html>
