--- a/fun.html
+++ b/fun.html
@@ -5,7 +5,7 @@
   
 <body>
   <div id="top_container">
-	  <h1>This Page will be for all P5.js Projects</h1>
+	  <h1>This Page will be for all Specialized Projects</h1>
   </div>
 </body>
 </html>
