--- a/fun.html
+++ b/fun.html
@@ -6,6 +6,7 @@
 <body>
   <div id="top_container">
 	  <h1>This Page will be for all Specialized Projects</h1>
+	  <h2>Coming Soon ... Click Back Button to Go Home</h2>
   </div>
 </body>
 </html>
