--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header>
     <nav>
-      <a href="about.html">About</a> <!-- If you want an About page -->
+      <a href="html/about.html">About</a> <!-- If you want an About page -->
       <a href="mailto:dragos.david@hatchcanada.com">Contact</a>
       <a href="https://github.com/DSBD">GitHub</a>
     </nav>
@@ -14,9 +14,9 @@
     <div id="top_container">
 	<h1>Welcome to Dragos's Hatch UP Headquarters</h1>
     <h2>Table of Contents</h2>
-    <p>- P5.js Apps  <a href="p5.html">Click Here</a></p>
-    <p>- Web Apps  <a href="web.html">Click Here</a></p>
-    <p>- Specialized Apps  <a href="fun.html">Click Here</a></p>
+    <p>- P5.js Apps  <a href="html/p5.html">Click Here</a></p>
+    <p>- Web Apps  <a href="html/web.html">Click Here</a></p>
+    <p>- Specialized Apps  <a href="html/fun.html">Click Here</a></p>
   </div>
 </body>
 </html>
