--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <html>
-<head>
+  <head>
     <title>Dragos's Hatch Portfolio Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-    <nav>
-      <a href="html/about.html">About</a> <!-- If you want an About page -->
-      <a href="mailto:dragos.david@hatchcanada.com">Contact</a>
-      <a href="https://github.com/DSBD">GitHub</a>
-    </nav>
-  </header>
+      <nav>
+        <a href="html/about.html">About</a> <!-- If you want an About page -->
+        <a href="mailto:dragos.david@hatchcanada.com">Contact</a>
+        <a href="https://github.com/DSBD">GitHub</a>
+      </nav>
+    </header>
     <div id="top_container">
-	<h1>Welcome to Dragos's Hatch UP Headquarters</h1>
-    <h2>Table of Contents</h2>
-    <p>- P5.js Apps  <a href="html/p5.html">Click Here</a></p>
-    <p>- Web Apps  <a href="html/web.html">Click Here</a></p>
-    <p>- Specialized Apps  <a href="html/fun.html">Click Here</a></p>
-  </div>
-</body>
+      <h1>Welcome to Dragos's Hatch UP Headquarters</h1>
+      <h2>Table of Contents</h2>
+      <p>- P5.js Apps  <a href="html/p5.html">Click Here</a></p>
+      <p1> 1) <a href = "html/first.html">First Website</a></p1>
+      <p>- Web Apps  <a href="html/web.html">Click Here</a></p>
+      <p>- Specialized Apps  <a href="html/fun.html">Click Here</a></p>
+    </div>
+  </body>
 </html>
