--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dragos's Hatch Portfolio Page</title>
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <header>
