--- a/html/p5.html
+++ b/html/p5.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>P5.js Projects Page</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
   </head>
 
   <body>
     <div id="top_container">
       <h1>This Page will be for all P5.js Projects</h1>
-      <p1> 1) <a href = "html/first.html">First Website</a></p1>
+      <p1> 1) <a href = "first.html">First Website</a></p1>
     </div>
   </body>
 </html>
