--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Dragos's About Page</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
   </head>
   <body>
     Welcome to the about me page. This is placeholder for now. Please hit the back arrow to go back to the main page.
