--- a/html/fun.html
+++ b/html/fun.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Specialized Projects Page</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
   
 <body>
