--- a/html/web.html
+++ b/html/web.html
@@ -6,8 +6,8 @@
   
 <body>
   <div id="top_container">
-	  <h1>This Page will be for all Web Projects</h1>
-	  <h2>Coming Soon ... Click Back Button to Go Home</h2>
+	  <h1>This Page is for all Web Projects</h1>
+	  <p1> 1) <a href = "first.html">First Website</a></p1>
   </div>
 </body>
 </html>
