--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <a href="html/about.html">About</a> <!-- If you want an About page -->
         <a href="mailto:dragos.david@hatchcanada.com">Contact</a>
         <a href="https://github.com/DSBD">GitHub</a>
+        <a href="https://hatchcoding.com"> Hatch Coding</a>
       </nav>
     </header>
     <div id="top_container">
